<resources>
    <string name="app_name">Dota Metrics</string>
    <string name="last_match_time">Last match: %1$s</string>
    <string name="search">Search</string>
    <string name="name_or_steam_id">Name or Steam ID</string>
    <string name="tab_text_1">Matches</string>
    <string name="tab_text_2">Heroes</string>
    <string name="tab_text_3">Peers</string>
    <string name="tab_text_4">Averages</string>
    <string name="loses">Loses</string>
    <string name="wins">Wins</string>
    <string name="winrate">Winrate</string>

    <!--    totals  -->
    <string name="kills">Kills</string>
    <string name="deaths">Deaths</string>
    <string name="assists">Assists</string>
    <string name="kda">K/D/A</string>
    <string name="gold_per_min">GPM</string>
    <string name="xp_per_min">XPM</string>
    <string name="last_hits">Last hits</string>
    <string name="denies">Denies</string>
    <string name="duration">Duration</string>
    <string name="hero_damage">Hero damage</string>
    <string name="tower_damage">Tower damage</string>
    <string name="hero_healing">Hero healing</string>
    <string name="hero">Hero</string>
    <string name="games_count">Games</string>
    <string name="player">Player</string>
    <string name="sample_kda">15/4/9</string>
    <string name="win">Won</string>
    <string name="lose">Lost</string>
    <string name="sample_date">28-05-2022</string>
    <string name="ranked">Ranked</string>

    <!--    lobby types  -->
    <string name="lobby_type_normal">Normal</string>
    <string name="lobby_type_practice">Practice</string>
    <string name="lobby_type_tournament">Tournament</string>
    <string name="lobby_type_tutorial">Tutorial</string>
    <string name="lobby_type_coop_bots">Coop bots</string>
    <string name="lobby_type_ranked_team_mm">Team ranked</string>
    <string name="lobby_type_ranked_solo_mm">Solo ranked</string>
    <string name="lobby_type_ranked">Ranked</string>
    <string name="lobby_type_1v1_mid">1v1 mid</string>
    <string name="lobby_type_battle_cup">Battle Cup</string>
    <string name="lobby_type_local_bots">Local bots</string>
    <string name="lobby_type_spectator">Spectator</string>
    <string name="lobby_type_event">Event</string>
    <string name="lobby_type_gauntlet">Gauntlet</string>
    <string name="lobby_type_new_player">New player</string>
    <string name="lobby_type_featured">Featured</string>
    <string name="average_rank">Avg rank</string>
    <string name="result">Result</string>
    <string name="lobby">Lobby</string>

    <string name="radiant_won">Radiant won</string>
    <string name="dire_won">Dire won</string>

    <string name="tab_match_1">Overview</string>
    <string name="tab_match_2">Stats</string>
    <string name="tab_match_3">Skills</string>
    <string name="anonymous">Anonymous</string>
    <string name="radiant">Radiant</string>
    <string name="dire">Dire</string>
    <string name="items">Items</string>
    <string name="gold">Gold</string>
    <string name="lasthits">Last\nhits</string>
    <string name="denies_stat">Denies</string>
    <string name="gpm">GPM</string>
    <string name="xpm">XPM</string>
    <string name="tower_dmg">Tower\ndmg</string>
    <string name="hero_dmg">Hero\ndmg</string>
    <string name="skill_build">Skillbuild</string>

    <string name="tab_main_1">Search</string>
    <string name="tab_main_2">Favorites</string>
    <string name="any_lobby">Lobby</string>
    <string name="last_games_info">Last 20 games info</string>
    <string name="hero_name">Hero name</string>
    <string name="apply_filter">Apply filter</string>
    <string name="players">Players</string>
    <string name="patches">Patches</string>
    <string name="teams">Teams</string>
    <string name="heroes">Heroes</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_closed">Drawer closed</string>
    <string name="patch_series">Series: %1$s</string>
    <string name="patch_date">First patch date: %1$s</string>

    <string name="no_patch_info">No info for this patch series</string>
    <string name="patch_changes">Changes:</string>

    <string name="patch_general_count">General: %1$s</string>
    <string name="patch_hero_count">Heroes: %1$s</string>
    <string name="patch_item_count">Items: %1$s</string>
    <string name="patch_general">General</string>
    <string name="patchnotes_heroes">Heroes</string>
    <string name="patchnotes_items">Items</string>

    <string name="team_rating">Rating: %1$s</string>
    <string name="tab_team_1">Players</string>
    <string name="tab_team_2">Matches</string>
    <string name="tab_team_3">Heroes</string>

    <string name="primary_attr">Attribute: %1$s</string>
    <string name="str">Strength: %1$s</string>
    <string name="agi">Agility: %1$s</string>
    <string name="intel">Intelligence: %1$s</string>
    <string name="resist">Magic resist: %1$s</string>
    <string name="range">Attack range: %1$s</string>
    <string name="attack_speed">Attack speed: %1$s</string>
    <string name="move_speed">Move speed: %1$s</string>

    <string name="str_name">Strength</string>
    <string name="agi_name">Agility</string>
    <string name="int_name">Intelligence</string>
    <string name="all_name">Universal</string>

    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="skill_bhv">Behavior: %1$s</string>
    <string name="hero_bkb_pierce">Bkb pierce: %1$s</string>
    <string name="hero_dmg_type">Damage type: %1$s</string>
    <string name="skill_cd">Cd: %1$s</string>
    <string name="skill_mc">Mc: %1$s</string>
    <string name="about">About</string>
    <string name="about_text">This app allows you to view your or your friends\'
        Dota 2 stats, such as played matches, favourite heroes, peers and global stats.
        It also contains information about all the heroes and professional teams from the game.
        \n\nThe app does not collect any personal data.
        \n\nAll the data the application gets from the open data source OpenDota API.</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>