<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.account.PeersFragment">

    <TextView
        android:id="@+id/title_hero_peer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player"
        android:textSize="18sp"
        android:layout_marginStart="12dp"
        android:paddingVertical="12dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_count_peer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games_count"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_winrate_peer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winrate"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginEnd="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_peers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_hero_peer"
        tools:listitem="@layout/peers_item" />

</androidx.constraintlayout.widget.ConstraintLayout>