<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.view.match.MatchStatsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_radiant_title_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="12dp"
            android:text="@string/radiant"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_match_stats_gold"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:paddingVertical="12dp"
            android:text="@string/gold"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_radiant_title_stats" />

        <TextView
            android:id="@+id/tv_match_stats_lh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="6dp"
            android:text="@string/lasthits"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_match_stats_gold" />

        <TextView
            android:id="@+id/tv_match_stats_denies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:text="@string/denies_stat"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_match_stats_gold" />

        <TextView
            android:id="@+id/tv_match_stats_gpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:text="@string/gpm"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_match_stats_gold" />

        <TextView
            android:id="@+id/tv_match_stats_xpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:text="@string/xpm"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.583"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_match_stats_gold" />

        <TextView
            android:id="@+id/tv_match_stats_hero_dmg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="6dp"
            android:text="@string/hero_dmg"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_match_stats_gold" />

        <TextView
            android:id="@+id/tv_match_stats_tower_dmg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:paddingVertical="6dp"
            android:text="@string/tower_dmg"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_match_stats_gold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_match_stats_radiant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_match_stats_gold"
            tools:itemCount="5"
            tools:listitem="@layout/match_stats_item" />

        <TextView
            android:id="@+id/tv_dire_title_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/dire"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rc_match_stats_radiant" />

        <TextView
            android:id="@+id/tv_match_stats_gold_dire"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:paddingVertical="12dp"
            android:text="@string/gold"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dire_title_stats" />

        <TextView
            android:id="@+id/tv_match_stats_lh_dire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="6dp"
            android:text="@string/lasthits"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_match_stats_gold_dire" />

        <TextView
            android:id="@+id/tv_match_stats_denies_dire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:text="@string/denies_stat"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_match_stats_gold_dire" />

        <TextView
            android:id="@+id/tv_match_stats_gpm_dire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:text="@string/gpm"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_match_stats_gold_dire" />

        <TextView
            android:id="@+id/tv_match_stats_xpm_dire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:text="@string/xpm"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.583"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_match_stats_gold_dire" />

        <TextView
            android:id="@+id/tv_match_stats_hero_dmg_dire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="6dp"
            android:text="@string/hero_dmg"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_match_stats_gold_dire" />

        <TextView
            android:id="@+id/tv_match_stats_tower_dmg_dire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:paddingVertical="6dp"
            android:text="@string/tower_dmg"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_match_stats_gold_dire" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_match_stats_dire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_match_stats_gold_dire"
            tools:itemCount="5"
            tools:listitem="@layout/match_stats_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>